@@ -4,6 +4,7 @@
 * Fix bug updating switch widgets in scan options.
 * Fixed bug importing file with non-ASCII characters in filename from file
   browser.
+* Use daylight savings time from document date when setting timezone.
 
 
 2.6.7 (08.04.2020):
